Completed all the functions. Now  need to refactor the project