@@ -1,9 +1,14 @@
+package com.hatfield_swimmingbooking.functionality;
+
+import com.hatfield_swimmingbooking.main.Main;
+import com.hatfield_swimmingbooking.util.Booking;
+import com.hatfield_swimmingbooking.util.Data;
 import java.util.ArrayList;
 import java.util.InputMismatchException;
 import java.util.Scanner;
 
 public class Student {
-    ArrayList<Object> studentData = Data.getStudentData();
+    Booking Booking = new Booking();    ArrayList<Object> studentData = Data.getStudentData();
     ArrayList<Object> bookingData = Booking.getBookingData();
     ArrayList<Object> bookedData = Booking.getBookedDate();
     static ArrayList<ArrayList<Object>> lessonDisplay = new ArrayList<>();
@@ -11,7 +16,7 @@ public class Student {
 
     public void bookingClasses() {
         System.out.println("\nPlease choose how you want to display the lessons:");
-        System.out.println("\t1. By Day \n\t2. By Coach Name \n\t3. By Grade");
+        System.out.println("\t1. By Day \n\t2. By com.hatfield_swimmingbooking.functionality.Coach Name \n\t3. By Grade");
         int lessonDisplayOptions = read.nextInt();
         if (lessonDisplayOptions > 0 && (lessonDisplayOptions < 4)) {
             switch (lessonDisplayOptions) {
@@ -34,7 +39,7 @@ public class Student {
                         }
                     }
                     if (lessonDisplay.isEmpty()) {
-                        System.out.println("There is no available lessons on " + optionDay + "-DAY");
+                        System.out.println(STR."There is no available lessons on \{optionDay}-DAY");
                     } else {
                         lessonPrint();
                     }
@@ -59,7 +64,7 @@ public class Student {
                         }
                     }
                     if (lessonDisplay.isEmpty()) {
-                        System.out.println("There is no available lessons on " + optionCoach + " Coach");
+                        System.out.println(STR."There is no available lessons on \{optionCoach} com.hatfield_swimmingbooking.functionality.Coach");
                     } else {
                         lessonPrint();
                     }
@@ -83,7 +88,7 @@ public class Student {
                         }
                     }
                     if (lessonDisplay.isEmpty()) {
-                        System.out.println("There is no available lessons on Grade " + optionGrade);
+                        System.out.println(STR."There is no available lessons on Grade \{optionGrade}");
                     }else {
                         lessonPrint();
                     }
@@ -91,17 +96,16 @@ public class Student {
             }
         }else{
             System.out.println("\nPlease enter valid option");
-            System.out.println("\t1. By Day \n\t2. By Coach Name \n\t3. By Grade");
+            System.out.println("\t1. By Day \n\t2. By com.hatfield_swimmingbooking.functionality.Coach Name \n\t3. By Grade");
             lessonDisplayOptions = read.nextInt();
         }
         // array list have id, day, date, month, time, coach, grade, participants, rating, review
-        String Uid = Main.Uid;
 
         System.out.println("Please enter the lesson avaiable lesson booking ID");
         String choosenBookingID = read.next().toUpperCase();
 
         // id 0, day 1, date 2, month 3, time 4, coach 5, grade 6, participants 7, rating 8, review 9
-        // (BID 0,Day 1, Date 2, Month 3, Time 4, Coach 5, Grade 6, Participants 7)
+        // (BID 0,Day 1, Date 2, Month 3, Time 4, com.hatfield_swimmingbooking.functionality.Coach 5, Grade 6, Participants 7)
         for (Object bookingArray : bookingData) {
             ArrayList<Object> bookingInfo = (ArrayList<Object>) bookingArray;
             String bookingID = (String) bookingInfo.get(0);
@@ -116,14 +120,32 @@ public class Student {
                 if (choosenBookingID.equals(bookingID)) {
                     Booking.makeBooking(bookingID, bookingParticipants);
                     bookingInfo.set(7, bookingParticipants+1);
+                    for (Object bookedArray : bookedData){
+                        ArrayList<Object> bookedInfo = (ArrayList<Object>) bookedArray;
+                        String bookedID = (String) bookedInfo.get(0);
+                        int bookedParticipants = (int) bookedInfo.get(7);
+                        int bookedNumber = (int) bookedInfo.get(8);
+                        int bookedGrade = (int) bookedInfo.get(6);
+                        if (bookedID.equals(bookingID)){
+                            bookedInfo.set(8, bookedNumber+1);
+                            bookedInfo.set(7, bookedParticipants +1);
+                            System.out.println("com.hatfield_swimmingbooking.util.Booking conformed!!");
+                            System.out.println(STR."You have lesson on \{bookingMonth} \{bookingDay} from \{bookingTime} to \{bookingTime + 1}");
+                            Main.userBookedLessons += 1;
+                            Swimming.swimmingBookingStart();
+                        }
+                    }
+                    int booked = 1;
                     int cancelled = 0;
+                    int attended = 0;
                     int rating = 0;
                     String review = "No Rating";
                     // Storing data from bookingData Array to BookedData Array
                     Booking.bookedData(bookingID, bookingDay, bookingDate, bookingMonth, bookingTime,
-                            bookingCoach, bookingGrade, bookingParticipants, cancelled, rating, review);
-                    System.out.println("Booking conformed!!");
-                    System.out.println("You have lesson on "+bookingMonth+" "+bookingDay+" from "+bookingTime+" to "+(bookingTime+1));
+                            bookingCoach, bookingGrade, bookingParticipants, booked, cancelled, attended, rating, review);
+                    System.out.println("com.hatfield_swimmingbooking.util.Booking conformed!!");
+                    System.out.println(STR."You have lesson on \{bookingMonth} \{bookingDay} from \{bookingTime} to \{bookingTime + 1}");
+                    Main.userBookedLessons += 1;
                 }
             } else {
                 System.out.println("You cannot book this lesson. Your grade level doesn't match the course.");
@@ -134,7 +156,7 @@ public class Student {
 
     public void bookingChanges() {
         Scanner read = new Scanner(System.in);
-        for (Object bookingArray : Booking.bookedDate) {
+        for (Object bookingArray : Booking.getBookedDate()) {
             ArrayList<Object> bookingInfo = (ArrayList<Object>) bookingArray;
             String Day = ((String) bookingInfo.get(1)).toUpperCase();
             String BID = (String) bookingInfo.get(0);
@@ -152,25 +174,30 @@ public class Student {
             ArrayList<Object> bookingInfo = (ArrayList<Object>) bookingArray;
             String bookingID = (String) bookingInfo.get(0);
             int bookingParticipants = (int) bookingInfo.get(7);
-            if (Booking.userLessonRecord.containsKey(bookingID)) {
+            int bookingCancelled = (int) bookingData.get(8);
+            if (Booking.getUserLessonRecord().containsKey(bookingID)) {
                 System.out.println("Do you with to Update or Cancel booking");
                 System.out.println("\t1. Cancel\n" +
                         "\t2. Update");
-                int n = read.nextInt();
-                switch (n){
+                int choosenOption = read.nextInt();
+                switch (choosenOption){
                     case 1:
                         bookingInfo.set(7, bookingParticipants-1);
-                        System.out.println("Booking Cancelled");
+                        System.out.println("com.hatfield_swimmingbooking.util.Booking Cancelled");
+                        Main.userCancelledLesson += 1;
+                        bookingInfo.set(8 , bookingCancelled+1);
                         break;
                     case 2:
                         bookingInfo.set(7, bookingParticipants-1);
-                        System.out.println("Updating the booking Data");
+                        System.out.println("Updating the booking com.hatfield_swimmingbooking.util.Data");
+                        Main.userCancelledLesson += 1;
+                        bookingInfo.set(8 , bookingCancelled+1);
                         bookingClasses();
                         break;
                     default:
                         System.out.println("Invalid Input..");
                         System.out.println("Please give the correct option");
-                        n = read.nextInt();
+                        choosenOption = read.nextInt();
                 }
             }
         }
@@ -178,7 +205,7 @@ public class Student {
 
     public void attendSwimming() {
         Scanner read = new Scanner(System.in);
-        for (Object bookingArray : Booking.bookedDate) {
+        for (Object bookingArray : Booking.getBookingData()) {
             ArrayList<Object> bookingInfo = (ArrayList<Object>) bookingArray;
             String Day = ((String) bookingInfo.get(1)).toUpperCase();
             String BID = (String) bookingInfo.get(0);
@@ -193,28 +220,40 @@ public class Student {
         }
         bookingIDCheck();
         for (Object bookingArray : bookedData){
-            ArrayList<Object> bookingInfo = (ArrayList<Object>) bookingArray;
-            String bookingID = (String) bookingInfo.get(0);
-            String Day = (String) bookingInfo.get(1);
-            int Date = (int) bookingInfo.get(2);
-            String Month = ((String) bookingInfo.get(3));
-            int Time = (int) bookingInfo.get(4);
-            String Coach = (String) bookingInfo.get(5);
-            int Grade = (int) bookingInfo.get(6);
-            int Participants = (int) bookingInfo.get(7);
-            if (Booking.userLessonRecord.containsKey(bookingID)) {
+            ArrayList<Object> bookedInfo = (ArrayList<Object>) bookingArray;
+            String bookingID = (String) bookedInfo.get(0);
+            String Day = (String) bookedInfo.get(1);
+            int Date = (int) bookedInfo.get(2);
+            String Month = ((String) bookedInfo.get(3));
+            int Time = (int) bookedInfo.get(4);
+            String Coach = (String) bookedInfo.get(5);
+            int Grade = (int) bookedInfo.get(6);
+            int Participants = (int) bookedInfo.get(7);
+            int BookedNumber = (int) bookedInfo.get(8);
+            int CancelledNumber = (int) bookedInfo.get(9);
+            int AttainedNumber = (int) bookedInfo.get(10);
+            int Rating = (int) bookedInfo.get(11);
+            String Review = (String) bookedInfo.get(12);
+            if (Booking.getUserLessonRecord().containsKey(bookingID)) {
                 Booking.addAttendanceRecord(Month);
-                System.out.println("Please give rating on this lesson out of 10");
-                int Rating = read.nextInt();
-                if(Rating < 11 ) {
-                    System.out.println("Please write review on this lesson");
-                    String Review = read.nextLine();
-                    Booking.addOnOldBookingData(bookingID, Day, Date, Month, Time, Coach, Grade, Participants,Rating, Review);
-                    if (Main.Grade <= 5) {
+                System.out.println("Please give ranging from 1 to 5\n\t1: Very dissatisfied\n\t2: Dissatisfied\n\t3: Ok\n\t4: Satisfied\n\t5: Very Satisfied");
+                Rating = read.nextInt();
+                if(Rating > 0 && Rating < 6) {
+                    System.out.println("Please write short review on this lesson");
+                    Review = read.nextLine();
+                    if ((Main.Grade+1) == Grade || Main.Grade <= 5) {
                         Main.Grade += 1;
                     }
+                    Main.userAttendedLessons +=1;
+                    Coach coach = new Coach();
+                    coach.calculatingCoachRating(Coach, Rating);
+                    // array list have String BID 0, String Day 1, int Date 2, String Month 3, int Time 4, String com.hatfield_swimmingbooking.functionality.Coach 5,
+                    // int Grade 6, int Participants 7,int Booked 8, int Cancelled 9, int Attended 10, int Rating 11, String Review 12
+                    if(Participants == 4){
+                        Booking.addOnOldBookingData(bookingID, Day, Date, Month, Time, Coach, Grade, Participants, BookedNumber, CancelledNumber, AttainedNumber, Rating, Review);
+                    }
                 }else{
-                    System.out.println("your review is more than 10\nPlease try again");
+                    System.out.println("Your rating is more than 5 or in Negative\nPlease try again");
                     Rating = read.nextInt();
                 }
             }
@@ -222,19 +261,25 @@ public class Student {
     }
 
     public void lernerMonthlyReport() {
+        int bookedNumber = 0; // Initialize to 0
+        int cancelledNumber = 0; // Initialize to 0
+        int attainedNumber = 0; // Initialize to 0
+        int numberOfLearners = 0; // Initialize to 0
         Scanner read = new Scanner(System.in);
-        System.out.println("Please select following for report");
-        System.out.println("\t1. Report of Learner.\t2.Report of Coach");
-        int choosenOptions = read.nextInt();
-        switch (choosenOptions){
-            case 1:
-                System.out.println("Report of Learner");
-            case 2:
-                System.out.println("Report of Coach");
-            default:
-                System.out.println("Invalid Input...\nPlease enter options again");
-                choosenOptions = read.nextInt();
+        System.out.println("Please select the Month: e.g., MAR as March");
+        String chosenMonth = read.next().toUpperCase();
+        for(Object oldBookedArray : Booking.getOldBookedData()){
+            ArrayList<Object> oldBookedInfo = (ArrayList<Object>) oldBookedArray;
+            String obtainedMonth = ((String) oldBookedInfo.get(3)).toUpperCase();
+            if(chosenMonth.equals(obtainedMonth)){
+                numberOfLearners += 1; // Increment the count of learners
+                bookedNumber += (int) oldBookedInfo.get(8); // Accumulate bookings
+                cancelledNumber += (int) oldBookedInfo.get(9); // Accumulate cancellations
+                attainedNumber += (int) oldBookedInfo.get(10); // Accumulate attendance
+            }
         }
+        System.out.println("Montthly Report of the Learners");
+        System.out.println("No. of users: "+numberOfLearners+"\tNo. of Bookings: "+bookedNumber+"\tNo. of Cancelled: "+cancelledNumber+"\tNo. of Attaindence: "+attainedNumber);
     }
 
     public void registerLerner() {
@@ -249,9 +294,8 @@ public class Student {
         System.out.println("Please Enter your grade: ");
         int grade = read.nextInt();
         String uid = name.substring(0, 3).toUpperCase() + Integer.toString((int) (10000 + Math.random() * 9999999)).substring(2, 5);
-        Data data = new Data();
         // how to is set Name and Uid from here to main
-        data.createStudent(uid, name, age, phoneNumber, gender, grade);
+        Data.createStudent(uid, name, age, phoneNumber, gender, grade , 0 ,0 ,0);
     }
 
     public int checkAge() {
@@ -283,15 +327,17 @@ public class Student {
             try {
                 System.out.println("Please Enter your phone number: ");
                 phoneNumber = read.nextDouble();
-                if (phoneNumber == 10) {
+                String phNumber = String.valueOf(phoneNumber);
+                if (phNumber.length() == 10) {
                     validPhoneNumber = true;
                     ;
                 } else {
                     System.out.println("Your phone number must be 10 digits");
+                    phoneNumber = read.nextDouble();
                 }
             } catch (InputMismatchException e) {
                 System.err.println("Invalid Input... \nPlease enter a valid phone number.");
-                read.nextLine();
+                phoneNumber = read.nextDouble();
             }
         }
         return "" + phoneNumber;
@@ -317,44 +363,44 @@ public class Student {
             int Date = (int) objects.get(2); // Index 1 for Date
             String Month = ((String) objects.get(3)); // Index 2 for Month
             int Time = (int) objects.get(4); // Index 3 for Time
-            String Coach = (String) objects.get(5); // Index 4 for Coach
+            String Coach = (String) objects.get(5); // Index 4 for com.hatfield_swimmingbooking.functionality.Coach
             int Grade = (int) objects.get(6); // Index 5 for Grade
             int Participants = (int) objects.get(7); //Index 7  for Participants
-            System.out.println("Booking ID: "+BID+"\tDay: " + Day + "\tMonth: " + Month + "\tDate: " + Date +"\t\tTime: From " + Time + " to " + (Time + 1) + "\t\tCoach: " + Coach + "\tGrade: " + Grade+"\t Participants: "+Participants);
-        }
+            System.out.printf("com.hatfield_swimmingbooking.util.Booking ID: %-10s Day: %-10s Month: %-10s Date: %-10d Time: From %-1d to %-10d com.hatfield_swimmingbooking.functionality.Coach: %-10s Grade: %-10d Participants: %-10d%n",
+                    BID, Day, Month, Date, Time, Time + 1, Coach, Grade, Participants);}
     }
 
     public void checkingUser() {
-        System.out.println("Are you existing User. Type 'Y' for Yes and 'N' for No.");
+        System.out.println("Are you an existing user? Type 'Y' for Yes and 'N' for No.");
         String checkOption = read.next().toUpperCase();
-        if (checkOption.equals("Y")){
-            System.out.println("Please Enter your Name");
+        while (!checkOption.equals("Y") && !checkOption.equals("N")) {
+            System.out.println("Invalid input. Please choose the right option (Y/N).");
+            checkOption = read.next().toUpperCase();
+        }
+        if (checkOption.equals("Y")) {
+            System.out.println("Please enter your name:");
             String checkName = read.next().toUpperCase();
             boolean validName = false;
-            while (!validName) {
-                for (Object arrayName : Data.studentData) {
-                    ArrayList<Object> studentInfo = (ArrayList<Object>) arrayName;
-                    String name = ((String) studentInfo.get(1)).toUpperCase();
-                    if (name.equals(checkName)) {
-                        validName = true;
-                        Main.Name = ((String) studentInfo.get(1)).toUpperCase();
-                        Main.Uid = (String) studentInfo.get(0);
-                        Main.Grade = (int) studentInfo.get(5);
-                        break;
-                    }
-                }
-                if (!validName) {
-                    System.out.println("\nInvalid name...");
-                    System.out.println("Please enter your name again: ");
-                    checkName = read.next().toUpperCase();
+            for (Object arrayName : Data.getStudentData()) {
+                ArrayList<Object> studentInfo = (ArrayList<Object>) arrayName;
+                String name = ((String) studentInfo.get(1)).toUpperCase();
+                if (name.equals(checkName)) {
+                    validName = true;
+                    Main.Name = ((String) studentInfo.get(1)).toUpperCase();
+                    Main.Uid = (String) studentInfo.get(0);
+                    Main.Grade = (int) studentInfo.get(5);
+                    break;
                 }
             }
-
-        }else if (checkOption.equals("N")){
-            System.out.println("Do you with to register or exit the system");
-            System.out.println("1. Add as New User. \n2. Exit");
+            if (!validName) {
+                System.out.println("Invalid name.");
+                checkingUser(); // Ask again for user input
+            }
+        } else if (checkOption.equals("N")) {
+            System.out.println("Do you wish to register or exit the system?");
+            System.out.println("1. Add as a New User\n2. Exit");
             int checkingToAddUser = read.nextInt();
-            switch (checkingToAddUser){
+            switch (checkingToAddUser) {
                 case 1:
                     registerLerner();
                     break;
@@ -362,19 +408,16 @@ public class Student {
                     Swimming.exit();
                     break;
                 default:
-                    System.out.println("Invalid Input.\nPlease choose the right option");
-                    checkingToAddUser = read.nextInt();
+                    System.out.println("Invalid input. Please choose the right option.");
+                    checkingUser(); // Ask again for user input
                     break;
             }
-        }else{
-            System.out.println("Invalid Input.\nPlease choose the right option");
-            checkOption = read.next().toUpperCase();
         }
     }
 
     public void bookingIDCheck(){
         boolean validBookingID = false;
-        String chosenBookingID = "";
+        String chosenBookingID;
         // Loop until a valid booking ID is provided
         while (!validBookingID) {
             System.out.println("Please enter the booking ID");
@@ -382,7 +425,7 @@ public class Student {
             // Check if the chosen booking ID exists in the booked data
             for (Object bookingArray : bookedData) {
                 ArrayList<Object> bookingInfo = (ArrayList<Object>) bookingArray;
-                String bookingID = (String) bookingInfo.get(0);
+                String bookingID = (String) bookingInfo.getFirst();
                 if (chosenBookingID.equals(bookingID)) {
                     validBookingID = true;
                     break;
